feat(0.0.13): 支持多用户隔离与按用户授权的 Feishu Token 获取
1. 为所有 Feishu 相关工具（feishuFolderTools.ts、feishuTools.ts、feishuBlockTools.ts）及 BaseApiService 增加 userKey 参数，实现多用户隔离与按用户授权。
2. 支持通过自定义 Token 服务（FEISHU_TOKEN_SERVICE_URL）按 userKey 获取 Feishu Token，未配置或 userKey 为空时回退为默认 appId/appSecret。
3. CacheManager 支持按 userKey 缓存 Token，缓存 key 逻辑封装于类内部。
完善 JSDoc 注释，所有相关方法均补充 userKey 参数说明，消除 IDE/linter 警告。
4. 更新 README，详细说明 FEISHU_TOKEN_SERVICE_URL 的用法及多用户场景配置建议。

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ FEISHU_APP_SECRET=your_feishu_app_secret_here
 FEISHU_BASE_URL=https://open.feishu.cn/open-apis
 FEISHU_TOKEN_LIFETIME=7200
 
+# FEISHU_TOKEN_SERVICE_URL: 自定义token服务地址（可选）
+# 请求类型: POST
+# 请求参数格式: { "userKey": "string" }
+# 返回数据格式: { "token": "string", "expire": number (可选, 单位秒) }
+FEISHU_TOKEN_SERVICE_URL=https://open.feishu.cn/open-apis
+
 # 服务器配置
 PORT=3333
 
