--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Model Context Protocol server for Feishu integration",
   "type": "module",
   "main": "dist/index.js",
+  "module": "./src/index.ts",
   "bin": {
     "feishu-mcp": "./dist/cli.js"
   },
@@ -12,12 +13,12 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc && tsc-alias",
+    "build": "npx @smithery/cli build",
     "type-check": "tsc --noEmit",
     "start": "node dist/index.js",
     "start:cli": "cross-env NODE_ENV=cli node dist/index.js",
     "start:http": "node dist/index.js",
-    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
+    "dev": "npx @smithery/cli dev",
     "dev:cli": "cross-env NODE_ENV=development tsx watch src/index.ts --stdio",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -53,6 +54,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@smithery/cli": "^1.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.17.0",
